Removed <h1> Tag (BUGGY)
I removed a redundant h1 tag from the display_entries.html page (the page of each entry.)

--- a/encyclopedia/templates/encyclopedia/display_entry.html
+++ b/encyclopedia/templates/encyclopedia/display_entry.html
@@ -11,8 +11,10 @@ I will use this tutorial: https://iheanyi.com/journal/2020/04/04/dynamic-page-ti
 {% endblock %}
 
 {% block body %}
-    <!-- This shows the title of the page in <h1> tags. I will also modify this to show the title of the entry article. -->
-    <h1>All Pages</h1>
+    <!-- This shows the title of the page in <h1> tags. I will also modify this to show the title of the entry article.
+        
+    I don't need this: the markdown notation from the md files will already put an h1 tag to the titles. -->
+    <!-- <h1>All Pages</h1> -->
 
     <!-- I removed the <ul> and the <li> tags to make the entry pages more readable (though it has some extra
     spaces that I need to remove.)
