Obtained md File's Title (BUGGY)
By using the split() function, I was able to obtain the title of the md file. The problem is that it's also grabbing the '#' sign and the 1st space between that sign and the title of the entry. I just want the title without the '#' sign.

--- a/encyclopedia/templates/encyclopedia/display_entry.html
+++ b/encyclopedia/templates/encyclopedia/display_entry.html
@@ -63,7 +63,7 @@ I will use this tutorial: https://iheanyi.com/journal/2020/04/04/dynamic-page-ti
 
     <!-- I will use this to see if I'm getting the name of the .md file, which is what I'll use as the entry's title.
      It didn't work. -->
-<!--    {{titles}}-->
+   {{title}}
 
     
 
