--- a/encyclopedia/templates/encyclopedia/display_entry.html
+++ b/encyclopedia/templates/encyclopedia/display_entry.html
@@ -61,8 +61,7 @@ I will use this tutorial: https://iheanyi.com/journal/2020/04/04/dynamic-page-ti
         {{entries|safe}}
     {% endif %}
 
-    <!-- I will use this to see if I'm getting the name of the .md file, which is what I'll use as the entry's title.
-     It didn't work. -->
+    <!-- I will use this to see if I'm getting the name of the .md file, which is what I'll use as the entry's title. -->
    {{title}}
 
     
