Added Ability to enter Random Page (BUGGY)
I made part of the 6th question from the homework assignment. I can enter into random entry pages if I click on 'Random page'. However, that only works n index.html, whereas, in reality, it should work in EVERY page of the website. Also, I need to add a seed so that the random number generated is truly random.

--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -22,7 +22,8 @@
                     Create New Page
                 </div>
                 <div>
-                    Random Page
+                    <!-- This will make the user go to a random entry from the existent entries in the wiki. -->
+                    <a href="/wiki/{{random_entry}}">Random Page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
