Finished Random Entry Algorithm
I finished the 6thpart of the homework assignment, which asked me to send the user to a random entry page if the user clicks on 'Random Page' on any page in the wiki.

--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -22,8 +22,10 @@
                     Create New Page
                 </div>
                 <div>
-                    <!-- This will make the user go to a random entry from the existent entries in the wiki. -->
-                    <a href="/wiki/{{random_entry}}">Random Page</a>
+                    <!-- This will make the user go to a random entry from the existent entries in the wiki.
+                    To do that, I will redirect the user to "URL/random". To do that, I need ot send the 
+                    user to the "random_article" function from views.py. -->
+                    <a href="{% url 'random_article' %}">Random Page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
