--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -12,7 +12,12 @@
         <div class="row">
             <div class="sidebar col-lg-2 col-md-3">
                 <h2>Wiki</h2>
-                <form>
+                <!-- I changed the request method of the form to "post". To make it work with the POST method, I added 
+                a csrf token (source: https://stackoverflow.com/questions/62797803/select-an-random-page-with-django .)
+                Also, I added "url 'query_search'" to go to the urls.py file and look for the query_search link, 
+                and find the query_search function from the views.py file. -->
+                <form action="{% url 'query_search' %}" method="post">
+                    {% csrf_token %}
                     <input class="search" type="text" name="q" placeholder="Search Encyclopedia">
                 </form>
                 <div>
