--- a/encyclopedia/templates/encyclopedia/display_entry.html
+++ b/encyclopedia/templates/encyclopedia/display_entry.html
@@ -67,6 +67,10 @@ I will use "title" to see if I'm getting the name of the .md file, which is what
     will leave the proper casing so that the entry titles don’t show up on the list as lower case letters.
 
 	So, instead of using “if query in entry”, I will use “if lower(query) in lower(entry)”.
+
+    To make the entry titles displayed on the previous algorithm to be clickable and send the user to its respective entry 
+    page, I will need to add a ‘href=”/wiki/{{entry}}”’ to each item from the list of results. Or in other words, I need to 
+    do the exact same thing that I did for index.html to display the list of clickable links.
     -->
     {% if entries == 'not found' %}
         <h1>Page Not Found</h1>
@@ -77,7 +81,7 @@ I will use "title" to see if I'm getting the name of the .md file, which is what
         {% for entry in list_of_entries %}
             {% if query in entry %}
                 <ul>
-                    <li>{{entry}}</li>
+                    <li><a href="/wiki/{{entry}}">{{entry}}</a></li>
                 </ul>
                 <!-- <p>The entry exists!</p> -->
             {% endif %}
