BUG FIX: Search Algorithm (BUGGY)
I had to rewrite huge chunks of the code to make the search queries case insensitive. Now, the user's not forced to type anything in uppercase if the title of the entry is in uppercase to display it in the list of search results. However, I will have a bug which is preventing me to show a message that says 'sorry, but there are no results' if the user types a query that's not a substring of any existing entry title.

--- a/encyclopedia/templates/encyclopedia/display_entry.html
+++ b/encyclopedia/templates/encyclopedia/display_entry.html
@@ -78,13 +78,15 @@ I will use "title" to see if I'm getting the name of the .md file, which is what
     {% elif entries == 'query search' %}
         <h1>Search results</h1>
         <br>
-        {% for entry in list_of_entries %}
-            {% if query in entry %}
-                <ul>
-                    <li><a href="/wiki/{{entry}}">{{entry}}</a></li>
-                </ul>
-                <!-- <p>The entry exists!</p> -->
+        {% for entry in entry_titles %}
+            <ul>
+                <li><a href="/wiki/{{entry}}">{{entry}}</a></li>
+            </ul>
+
+            {% if results_message != '' %}
+                <p>{{results_message}}</p>		
             {% endif %}
+            
         {% endfor %}
 
     {% else %}
