Added Create Page
I added a file called create.html, which has the page that will let the user create an entry for the wiki. If the user clicks on the link on the sidebar that says 'Create New Page', they will be taken to an empty page, which is the creation page.

--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -26,7 +26,9 @@
                     <a href="{% url 'index' %}">Home</a>
                 </div>
                 <div>
-                    Create New Page
+                    <!-- I will add a link to this to send the user to the page that will let them create a
+                    new entry for the wiki. To do that, I need to send them to the "/create" URL. -->
+                    <a href="{% url 'create' %}">Create New Page</a>
                 </div>
                 <div>
                     <!-- This will make the user go to a random entry from the existent entries in the wiki.
