Updated Creation Algorithm (BUGGY)
Users can now create entries and save them to the website. However, if the user types a '#' alongside the title, the user won't be able to reach that entry unless they use the 'Random page' link. Also, the title of the newly created entries is not being rendered once the user enters the page of the newly created entry.

--- a/encyclopedia/templates/encyclopedia/display_entry.html
+++ b/encyclopedia/templates/encyclopedia/display_entry.html
@@ -96,6 +96,9 @@ I will use "title" to see if I'm getting the name of the .md file, which is what
     I need to use "title", NOT "fixed_title", since that's the name that I gave to the variable in views.py. -->
     <!-- {{title}} -->
 
+    <!-- DEBUGGING MESSAGES. DELETE LATER. -->
+    {{entry_title}}
+    {{entry_description}}
     
 
 
