--- a/encyclopedia/templates/encyclopedia/create.html
+++ b/encyclopedia/templates/encyclopedia/create.html
@@ -45,8 +45,13 @@ from the views.py file. -->
     Note: I could edit the text of the submit button to “Save”, since it’s currently only displaying text in Spanish 
     from my computer. That can be done by assigning the <input> tag with the submit button the “value” attribute, and 
     giving it the value of “Save” (source: 
-    https://stackoverflow.com/questions/14007613/change-text-from-submit-on-input-tag/14007619 .) 
+    https://stackoverflow.com/questions/14007613/change-text-from-submit-on-input-tag/14007619 .)
+    
+    I added an error message if the user types the title of an entry that already exists.
     -->
+    {% if error_message == 'Error' %}
+        <p style="color: red;"><b>Sorry, but an entry with that title already exists. Please, use another title.</b></p>
+    {% endif %}
     <form method="post">
         {% csrf_token %}
         <input type="text" name="entry-title" placeholder="Title of the Entry (e.g: JS)">
