Finished the Edition Algorithm
I finished the edition algorithm. Now the user can edit an existing entry, and be taken directly into that entry's page after clicking on 'Save' on the edition page. Double-check, since I think I finished this assignment.

--- a/encyclopedia/templates/encyclopedia/edit.html
+++ b/encyclopedia/templates/encyclopedia/edit.html
@@ -5,13 +5,14 @@
 <!-- I will add a title that says "Edit entry" on the browser's tab. I will send it from a new function
 from the views.py file. -->
 {% block title %}
-    Edit Page
+    Edit Existing Entry
 {% endblock %}
 
 {% block body %}
 
     <!-- This prints a title saying "Edit Page" on the body of the page -->
-    <h1>Edit Page</h1>
+    <h1>Edit Existing Entry</h1>
+    <br>
 
     <!-- I will first write the HTML code for the page for editing existing entries. Since the question doesn’t tell me 
     to let the user edit the title, and it only tells me to use a <textarea>, I will assume that the user shouldn’t 
